Fix content overflow

--- a/src/components/DebugPaneContent.scss
+++ b/src/components/DebugPaneContent.scss
@@ -2,4 +2,6 @@
   display: flex;
   flex-direction: row;
   flex-grow: 1;
+  min-width: 0;
+  min-height: 0;
 }
